<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>test_quality_of_service</name>
    <version>0.9.1</version>
    <description>
        Test quality of service features, specifically liveliness, deadline, and lifespan.
    </description>
    <maintainer email="ros-contributions@amazon.com">Amazon ROS Contributions</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_cmake</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>rclcpp</test_depend>
    <test_depend>rcutils</test_depend>
    <test_depend>rmw</test_depend>
    <test_depend>rmw_implementation</test_depend>
    <test_depend>rmw_implementation_cmake</test_depend>
    <test_depend>std_msgs</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
